--- a/myapp/templates/hacer_prediccion.html
+++ b/myapp/templates/hacer_prediccion.html
@@ -25,7 +25,7 @@
         <div class="resultado">
             <h2>Resultado de la Predicción</h2>
             <p><strong>Texto Analizado:</strong> {{ texto_ingresado }}</p>
-            <p><strong>Predicción Final:</strong> <strong>{{ resultado_prediccion }}</strong></p>
+            <p><strong>Predicción Final del modelo:</strong> <strong>{{ resultado_prediccion }}</strong></p>
         </div>
     {% endif %}
 
